--- a/editor.html
+++ b/editor.html
@@ -147,7 +147,7 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          Additional features:
+          <p>Additional features:</p>
           <ul>
             <li><p>General-purpose undo/redo implementation.</p></li>
             <li><p>Multi-select allowing for the transformation of multiple entities at once.</p></li>
