CV & TorS gameplay

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
               <li>14 week development (20h/week) with a team of 5 programmers, 3 level designers and 4 artists</li>
               <li>Made in our own C++ and DirectX11 game engine</li>
             </ul></td>
-            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/torsgp_thumb.png">
+              <source src="assets/img/torsgp.mp4" type="video/mp4">
             </video></td>
           </tr>
           <tr class="td-with-background1">
