CV rename and video mobile fix

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile td-with-background1">
-            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/torsgp_thumb.png">
+              <source src="assets/img/torsgp.mp4" type="video/mp4">
             </video></td>
           </tr>
           <!-- Loa of Death -->
@@ -318,7 +318,7 @@
             <i class="bi bi-file-earmark-person"></i> CV: 
             <a href="pdf.html" class="portfolio-details-lightbox3" data-glightbox="type: external" title="Portfolio Details">
               Preview</a> - 
-            <a href="assets/img/CV.pdf" download>Download</a>
+            <a href="assets/img/EliaRonningCV.pdf" download>Download</a>
             <br><br></span>
           </p></td>
             <td style="text-align: center;" class="desktop-only"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
